# prism

./: .gitignore  Makefile  PRISM-deps.dot  README.md  beloved-prompts.md  prism.ts  pyproject.toml
.chrollo/memories/: 2026-06-24_194526_019efaf3.md
docs/: ARC.md  BUILDING PRISM.md  PRISM CLI CONCEPT.md  PRISM-SKILL.md  PRISM.md
docs/extensions/: PRISM-GDSCRIPT-EXTENSION.md  PRISM-HCL-EXTENSION.md
docs/prism/: SKILL.md  _meta.json
src/prism/: __main__.py  config.py  main.py
src/prism/engine/: languages.py  semgrep_runner.py  treerunner.py
src/prism/enrich/: enricher.py  import_rules.py  module_graph.py  resolver.py
src/prism/output/: viz.py
src/prism/rules/: comparison-pitfalls.yaml  print-vs-logging.yaml  signal-handler-registration.yaml  typescript-any-type.yaml  typescript-async-without-await.yaml  typescript-console-in-extension.yaml  typescript-non-null-assertion.yaml  typescript-process-exit-magic.yaml  typescript-unhandled-promise.yaml  unchecked-exit-codes.yaml  unused-return.yaml
tests/: conftest.py  test_cli.py  test_clones.py  test_complexity.py  test_config.py  test_dead_code.py  test_error_handling.py  test_import_rules.py  test_languages.py  test_module_graph.py  test_prism.py  test_resolver.py
